# ESP32-FPGA-MatrixPanel

./: .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE  Makefile  README.md  REUSE.toml  library.json  sdkconfig  setup.cfg  setup_env.sh
.devcontainer/: devcontainer.json  setup
.github/workflows/: release.yml
doc/: toolchainsetup.md
scripts/: flash.sh  troubleshoot.sh
src/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c  main.cpp  matrix_panel_fpga.cpp  matrix_panel_fpga.hpp  matrix_panel_fpga_config.hpp
